# ai-workflow-engine

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  self-governance.yaml
.github/workflows/: ci.yml
docs/: AGENT_PROTOCOL.md  CHANGELOG.md  CONTEXT.md  DECISION_LOG.md  FINAL_COMPLETION_REPORT.md  GOVERNANCE_AUDIT.md  IMPLEMENTATION_GAP_ANALYSIS.md  MASTER_ROADMAP.md  MILESTONE_3_VALIDATION.md  MILESTONE_4_VALIDATION.md  PROJECT_STATE.md  TASK_QUEUE.md  VALIDATION_REPORT.md  architecture.md  configuration.md  current_task.md  milestone-2-plan.md  milestone-3-plan.md  milestone-4-plan.md  milestones.md  remaining_tasks.md
docs/agentos-dashboard/: API_SPEC.md  ARCHITECTURE.md  (+13 more)
examples/: amozesh_konkur.yaml
handover/: PROJECT_CHECKSUM.md  PROJECT_HANDOVER.md
scripts/: orchestration_feature_state.py
tests/: conftest.py  test_agent_artifacts.py  test_agent_models.py  test_agent_runner.py  test_agent_sandbox.py  test_agent_verification.py  test_apply_patch_gate.py  test_approval.py  test_cli.py  test_cli_contract_v2.py  test_commit_gates.py  test_config.py  test_git.py  test_git_client_reads.py  test_git_writer.py  test_governance.py  test_handover.py  test_migration_cli.py  test_migration_models.py  test_migration_plan_apply.py  test_migration_readers.py  test_orchestration_feature_state.py  test_prompt_context.py  test_prompt_renderer.py  test_prompt_store.py  test_prompt_templates.py  test_prompt_validator.py  test_push_gates.py  test_schema_registry.py  test_workflow_event_store.py  test_workflow_events.py  test_workflow_transitions.py
(+383 files in other folders)
