[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ai-workflow-engine"
version = "0.1.0"
description = "Deterministic governance gates for AI-assisted software development"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3",
  "PyYAML>=6.0,<7",
  "rich>=13.7,<15",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "black>=24.4,<26",
  "mypy>=1.10,<2",
  "pre-commit>=3.7,<5",
  "pytest>=8.2,<9",
  "ruff>=0.5,<1",
  "types-PyYAML>=6.0.12",
]

[project.scripts]
workflowctl = "ai_workflow_engine.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_workflow_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["ai_workflow_engine"]
